docker/ingress/ingress-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-rules
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - alpha.shoonya.ai4bharat.org
    secretName: tls-secret
  rules:
  - host: alpha.shoonya.ai4bharat.org
    http:
        paths:
        - pathType: Prefix
          path: /(.*)
          backend:
            service:
              name: shoonya-django-backend
              port:
                number: 80
